Fixed project overlap issue
Projects were bleeding into each other and into the Links section.

--- a/themes/my_theme/sass/responsive.scss
+++ b/themes/my_theme/sass/responsive.scss
@@ -192,6 +192,7 @@ nav{
 
 #work{
   background-attachment: fixed;
+  height: 100%;
   @media #{$mobile}{
     p{
       font-size:14px;
@@ -228,6 +229,7 @@ nav{
       position:relative;
       background-color: transparent;
       z-index:3;
+      margin-bottom: 30px;
       pointer-events: all;
       .img-wrapper{
         img{
